--- a/inst/doc/Inbred_Based_Populations.Rmd
+++ b/inst/doc/Inbred_Based_Populations.Rmd
@@ -1377,6 +1377,8 @@ With argument `tag` you can highlight some markers at the figure according to yo
 
 As already mentioned, `OneMap` uses HMM multipoint approach to estimate genetic distances, a very robust method, but it can take time to run if you have many markers. In 2017, Schiffthaler et. al release an `OneMap` fork with modifications in CRAN and in github with the possibility of parallelize the HMM chain dividing markers in batches and use different cores for each phase. Their approach speed up our HMM and keeps the genetic distances estimation quality. It allows to divide the job in maximum four cores according with the four possible phases for outcrossing and f2 mapping populations. We add this parallelized approach to the functions: `map`, `mds_onemap`, `seriation`, `rcd`, `record` and `ug`. For better efficiency it is important that batches are composed by 50 markers or more, therefore, this approach is only recommended for linkage groups with many markers.
 
+The parallelization is here available for all types of operational systems, however we suggest to set argument `parallelization.type` to `FORK` if you are not using Windows system. It will improve the procedure speed.
+
 Here we will show an example how to use the BatchMap approach in some functions that requires HMM. For this, we will simulate a group with 300 markers (we don't want this vignette takes too much time to run, but usually maps with markers from high-throughput technologies result larger groups). Before start, you can see the time spent for each approach (See also [Session Info](#Session-info)) in this example:
 
 ```{r, echo=FALSE, eval=FALSE}
