--- a/vignettes/Outcrossing_Populations.Rmd
+++ b/vignettes/Outcrossing_Populations.Rmd
@@ -215,20 +215,13 @@ With the `onemap_read_vcfR` you can convert the object from `vcfR` package direc
 
 We will use the example file `vcf_example_out.vcf.gz` to show how it works, which contains markers from the same population of `onemap_example_out.raw`.
 
-First, we convert the `VCF` file to `vcfR` object:
+Here we use the the `vcfR` package internally to help this conversion. The `vcfR` authors mentioned in their [tutorials](https://knausb.github.io/vcfR_documentation/index.html) that RAM memory use is an important consideration when using the package. Depending of your dataset, the object created can be huge and occupy a lot of memory.
 
-```{r}
-library(vcfR)
-vcfR.object <- read.vcfR(system.file("extdata/vcf_example_out.vcf.gz", package = "onemap"))
-```
-
-As described in the `vcfR` package vignette, RAM memory use is an important consideration when using `vcfR`. Depending of your dataset, the object created can be huge and occupy a lot of memory.
-
-After, you can use `onemap_read_vcfR` function to convert this object to `onemap` object. The parameters used are the `vcfR.object` (which was just created), the identification of each parent (here, you must define only one sample for each parent) and the cross type.
+You can use `onemap_read_vcfR` function to convert the VCF file to  `onemap` object. The parameters used are the `vcf` with the VCF file path, the identification of each parent (here, you must define only one sample for each parent) and the cross type.
 
 
 ```{r, eval=FALSE}
-vcf_example_out <- onemap_read_vcfR(vcfR.object = vcfR.object,
+vcf_example_out <- onemap_read_vcfR(vcf = system.file("extdata/vcf_example_out.vcf.gz", package = "onemap"),
                                     parent1 = "P1", 
                                     parent2 = "P2", 
                                     cross = "outcross")
@@ -249,12 +242,6 @@ You can also have more missing data in the returned object compared with the VCF
 vcf_example_out
 ```
 
-After the conversion, we can save the `vcfR.object` as a `.RData` and remove it from the workspace, once it can occupy a lot of memory and turn the other process too slow. 
-
-```{r, eval=FALSE}
-save(vcfR.object, file = "vcfR.object.RData") 
-# rm(vcfR.object)
-```
 
 **NOTE**:From version 2.0.6 to 2.1.1005, `OneMap` had the `vcf2raw` function to convert `vcf` to `.raw`. Now, this function is defunct, but it can be replaced by a combination of `onemap_read_vcfR` and `write_onemap_raw` functions. See [Exporting .raw file from onemap object](#exporting-.raw-file-from-onemap-object) session to further information about `write_onemap_raw`.
 
@@ -284,7 +271,7 @@ Here is an example for the `vcf_example_out` dataset.
 ```{r, message=F,warning=F, eval=FALSE}
 # For outcrossing population
 create_depths_profile(onemap.obj = vcf_example_out,
-                      vcfR.object = vcfR.object, 
+                      vcf = system.file("extdata/vcf_example_out.vcf.gz", package = "onemap"), 
                       parent1 = "P1", 
                       parent2 = "P2", 
                       vcf.par = "AD", 
