--- a/inst/doc/Outcrossing_Populations.Rmd
+++ b/inst/doc/Outcrossing_Populations.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r knitr_init, echo=FALSE, cache=FALSE}
+```{r knitr_init, echo=FALSE, cache=FALSE, message=FALSE}
 library(knitr)
 library(rmarkdown)
 knitr::opts_chunk$set(collapse = TRUE,
