--- a/vignettes/Inbred_Based_Populations.Rmd
+++ b/vignettes/Inbred_Based_Populations.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r knitr_init, echo=FALSE, cache=FALSE}
+```{r knitr_init, echo=FALSE, cache=FALSE, message=FALSE}
 library(knitr)
 library(rmarkdown)
 
